--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,7 @@ testpaths = [
     "tests/unit_tests/"
 ]
 log_file_level = "DEBUG"
+
+[tool.poetry.dependencies]
+pydantic = "^2.12.5"
+pyyaml = "^6.0.3"
